--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <i class="fa fa-linkedin hover-opacity"></i>
         </div>
         <p class="medium">Powered by
-            <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="hover-text-green">w3.css</a>
+            <a href="https://www.facebook.com/haminhducyka" target="_blank" class="hover-text-green">haminhducyka</a>
         </p>
         <div class="clear"></div>
     </footer>
